# proof-of-concept

./: .gitignore  README.md
applied-math/probability/: main.py  met-hasting.py  pyproject.toml  rbf.py
benchmark/: base.py  benchmark.md  benchmarks.py  clustering.py  run_benchmarks.py  search.py
front-end/learning-basics/: start.html
genai/: pyproject.toml
genai/embedding/: bert.py
genai/gpt-2/: attention.py  embeddings.py  eval.py  gpt2.py  main.py  modules.py  overview.md  sample.py  sample_data.py  tokenizer.py
genai/rag/: main.py  overview.md  sample_document.txt
machine-learning/: iris.py  rincon_demo_deep.py  rincon_demo_rf.py  rincon_demo_text.py  rincon_demo_vision.py  text_demo.py  titanic.py  vision_demo.py
meathead/: README.md
navera/: products.csv
neural-nets/basics/: trig.py
neural-nets/diffusion/: basic.py  text_diffusion_model.pt
neural-nets/perspective-search/: README.md
neural-nets/perspective-search/data/: labeled_perspective_data.csv
neural-nets/perspective-search/src/perspective_search/: __init__.py  perspective_pipeline.py
neural-nets/reinforcement-learning/: game.py
nn/diffusion/: tokenizer.pkl
nn/gnn/: diffusion_on_graphs.ipynb  simple_diffusion.ipynb
nn/perspective-search/: pyproject.toml
other/: buy_a_house.py  fire.py  pyproject.toml  weather_perf.py
pde/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  test_heat_2d.py  test_heat_equation.py
pde/docs/: README.md  Roadmap.md  best-practices.md  config.md  domains-grids.md  equations-setup.md  index.md  llm-guide.md  overview.md  solvers-iterative.md  solvers-timestepping.md  visualization.md
pde/examples/notebooks/: intro.ipynb
pde/examples/python/: bc_comparison_demo.py  config_demo.py  heat_1d_backward_demo.py  heat_1d_crank_nicolson_demo.py  heat_1d_demo.py  heat_1d_mixed_bc_demo.py  heat_1d_neumann_demo.py  heat_2d_backward_demo.py  heat_2d_crank_nicolson_demo.py  heat_2d_demo.py  heat_2d_neumann_demo.py  heat_2d_simple.py  poisson_2d_demo.py  poisson_2d_neumann_demo.py  solver_comparison_demo.py
pde/pde_sdk/: Makefile  __init__.py
pde/pde_sdk/boundaries/: __init__.py  base.py  dirichlet.py  neumann.py
pde/pde_sdk/config/: __init__.py  calculator.py  recommendations.py
pde/pde_sdk/domains/: __init__.py  uniform1d.py  uniform2d.py
pde/pde_sdk/equations/: __init__.py  heat.py  poisson.py
pde/pde_sdk/rust_backend/: __init__.py
pde/pde_sdk/solvers/: __init__.py  backward_euler.py  crank_nicolson.py  explicit_euler.py  poisson_iterative.py
pde/pde_sdk/utils/: __init__.py  progress.py
pde/pde_sdk/visualization/: __init__.py  plot.py
pde/rust/pde_sdk_rs/: Cargo.toml  Makefile  README.md
pde/rust/pde_sdk_rs/src/: equations.rs  grid.rs  lib.rs  solver.rs
pde/tests/: test_boundaries.py  test_config.py  test_heat_equation.py  test_poisson_equation.py  test_progress.py  test_visualization.py
search/: high_performance_search.py  naive_search.py  optimized.py  search.md
tests-go/: go.mod  main.go
