[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "scipy>=1.9.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-material-extensions>=1.3.0",
    "pymdown-extensions>=10.0.0",
]

# Future: Add maturin when ready for Rust integration
# "maturin>=1.4.0",

[project]
name = "pde-sdk"
version = "0.1.0"
description = "Finite-difference SDK for solving common PDEs on uniform 1D/2D grids"
readme = "README.md"
requires-python = ">=3.11"
#classifiers = [
#    "Development Status :: 3 - Alpha",
#    "Intended Audience :: Science/Research",
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.11",
#    "Programming Language :: Python :: 3.12",
#    "Topic :: Scientific/Engineering :: Mathematics",
#    "Topic :: Scientific/Engineering :: Physics",
#]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
progress = [
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
include = ["pde_sdk"]
exclude = ["rust"]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["N806", "N803"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
